v1.3.1/_sources/L2SIVacuumLib_L2SIVacuum_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 
      -
    * - Target IP address
      - 
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _L2SIVacuum_pragmas:

Pragmas
-------

Total pragmas found: 251
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        L2SI Vacuum Library, SLAC, , Unset
        LCLS General, SLAC, Unset, Unset
        LCLSVacuumSerialDriverLib, SLAC, Unset, Unset
        PMPS, SLAC - LCLS, Unset, 0.12.0
        SysFile, System, , Unset
        Tc2_DataExchange, Beckhoff Automation GmbH, Unset, Unset
        Tc2_EtherCAT, Beckhoff Automation GmbH, Unset, Unset
        Tc2_IoFunctions, Beckhoff Automation GmbH, , Unset
        Tc2_Math, Beckhoff Automation GmbH, , Unset
        Tc2_MC2, Beckhoff Automation GmbH, , Unset
        Tc2_ModbusSrv, Beckhoff Automation GmbH, Unset, Unset
        Tc2_SerialCom, Beckhoff Automation GmbH, , Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc2_TcpIp, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, Unset
        Tc3_EventLogger, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Interfaces, Beckhoff Automation GmbH, , Unset
        Tc3_JsonXml, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset
        TcUnit, www.tcunit.org, Unset, Unset

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4393632 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 86105976 (8)
        Constants.bLittleEndian, BOOL, 86105960 (8)
        Constants.bSimulationMode, BOOL, 86105968 (8)
        Constants.CompilerVersion, VERSION, 86107680 (64)
        Constants.CompilerVersionNumeric, DWORD, 86107776 (32)
        Constants.gc_GaugeValidState, INT, 8575792 (16)
        Constants.gc_GaugeValidState, INT, 8559200 (16)
        Constants.gc_iSizeOfGGOArray, INT, 4397744 (16)
        Constants.gc_iSizeOfGGOArray, INT, 8575776 (16)
        Constants.nPackMode, UINT, 86107056 (16)
        Constants.nRegisterSize, WORD, 86107040 (16)
        Constants.RuntimeVersion, VERSION, 86107616 (64)
        Constants.RuntimeVersionNumeric, DWORD, 86107744 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4394016 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4394368 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (85632)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4182848 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4182880 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.MaxNumberOfAsserts, UINT, 4394800 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4394784 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4392304 (16)


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 4397728 (16)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsLogger, FB_ADSLogStringMessageFifoQueue, 4429760 (4129152)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4397696 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 4395648 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 4395584 (64)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4397704 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4397712 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4394816 (768)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 4397760 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4392296 (8)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4393664 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4393792 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4390576 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4393824 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>226 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4184576 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4184480 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4184512 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4184352 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4184448 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4184288 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4184544 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4184320 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4184384 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4184416 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4184160 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4183936 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4184064 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4184128 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4184032 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4184192 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4184224 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4184000 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4183968 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4184096 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4183872 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4184256 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4183840 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4183904 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4184608 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4184640 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4185696 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4185632 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4185728 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4185760 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4185792 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4185824 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4185664 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4183728 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4183664 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4183792 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4183504 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4183776 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4183536 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4183488 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4183616 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4183808 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4183632 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4183648 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4183744 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4183520 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4183712 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4183568 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4183600 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4183680 (16)
        Global_Variables.ADSSTATE_START, UINT, 4183552 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4183584 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4183760 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4183696 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4251520 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4251552 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4251584 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4183200 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4183424 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4183440 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4183312 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4183232 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4183296 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4183328 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4183248 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4183264 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4183280 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4183344 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4183360 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4183376 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4183392 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4183408 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4183216 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4183472 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4183456 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4185856 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4183832 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4183824 (8)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4259232 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4264544 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4270816 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4270784 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4270752 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4270848 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4186528 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 8575424 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4250264 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4188288 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4270896 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4270904 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 8575360 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4252160 (128)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4392744 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4392448 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4392320 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4250272 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4186512 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 86107072 (256)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 8559744 (256)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4251632 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4251616 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4251648 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4251664 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4251680 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4252000 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4251776 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4252096 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4251872 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4252064 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4252128 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4251712 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4251744 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4251936 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4251840 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4251968 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4252032 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4251904 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4251808 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4185952 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4186016 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4185984 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4185888 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4186048 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4185920 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4252544 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4252288 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4251600 (16)
        Global_Variables.g_DummyVG, ST_VG, 8559328 (416)
        Global_Variables.g_DummyVG, ST_VG, 86105984 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 8559216 (16)
        Global_Variables.g_iSizeOfGGOArray, INT, 86105856 (16)
        Global_Variables.g_stSystem, ST_System, 8559232 (88)
        Global_Variables.g_stSystem, ST_System, 86105872 (88)
        Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 86105912 (48)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4188256 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4188136 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4188224 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4188240 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4251488 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4249952 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4249984 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4249856 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4249824 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4249792 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4188144 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4250016 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4188304 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4250240 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4188296 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4250256 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4186624 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4250248 (8)
        Global_Variables.nWatchdogTime, BYTE, 4185880 (8)
        Global_Variables.PI, LREAL, 4186560 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4250176 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4250208 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4250144 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4250048 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4185440 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4184800 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4184768 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4250080 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4250112 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4184864 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4185184 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4185152 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4251456 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4185024 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4184832 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4185120 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4185056 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4184896 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4185216 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4185088 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4184960 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4184992 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4184928 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4249888 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4249920 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4185248 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4184672 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4184704 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4184736 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4185312 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4185280 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4185344 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4185408 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4185376 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4185864 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4185872 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4259168 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4259520 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4259104 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4259456 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4258880 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4258032 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4258416 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4259040 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4259392 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4258912 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4259264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4258976 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4259328 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4186496 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4186480 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4186384 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4186320 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4186336 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4186352 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4186304 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4186368 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4186448 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4186400 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4186432 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4186464 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4186416 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 8568256 (7104)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4185568 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4185472 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4185536 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4185504 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4185600 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4259584 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_LCLS_Vacuum, ST_LibVersion, 86107328 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4393056 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 8575488 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 8567936 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4393344 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4182912 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4187840 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4394080 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4394496 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4187168 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 8558912 (288)

.. raw:: html

   </details>
   <br />


LCLSVacuumSerialDriverLib
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLSVacuumSerialDriverLib.L2SI_Vacuum_Library.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 8559272 (48)


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>27 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 8565632 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 8563184 (16)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 8563200 (1216)
        PMPS_GVL.cstSafeBeam, ST_BeamParams, 8564416 (1216)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 8565664 (512)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 8562976 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 8563072 (64)
        PMPS_GVL.fHiK_LUnd, LREAL, 8566464 (64)
        PMPS_GVL.fLowK_LUnd, LREAL, 8566400 (64)
        PMPS_GVL.fPeriod_mm_LUnd, LREAL, 8566336 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 8562432 (512)
        PMPS_GVL.g_areVBoundariesK, REAL, 8567040 (512)
        PMPS_GVL.g_areVBoundariesL, REAL, 8566528 (512)
        PMPS_GVL.g_cBoundaries, INT, 8566208 (16)
        PMPS_GVL.iHighBound_LUnd, UDINT, 8566272 (32)
        PMPS_GVL.iLowBound_LUnd, UDINT, 8566240 (32)
        PMPS_GVL.MAX_APERTURES, UINT, 8565648 (16)
        PMPS_GVL.MAX_ASSERTIONS, UDINT, 8566176 (32)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 8563136 (32)
        PMPS_GVL.MAX_FAST_FAULTS, DINT, 8562944 (32)
        PMPS_GVL.MAX_STOPPERS, UINT, 8563168 (16)
        PMPS_GVL.reVHyst, REAL, 8566304 (32)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 8561216 (1216)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 8560000 (1216)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 8563008 (64)

.. raw:: html

   </details>
   <br />


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 8567552 (384)


PRG_Test
^^^^^^^^

.. raw:: html

   <details>
       <summary>45 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Test.fb_GCC_Test, FB_GCC_Test, 73319616 (12785216)
        PRG_Test.fb_GCC_Test.fb_MKS422.i_iPRESS_R, INT, 86104640 (16)
        PRG_Test.fb_GCC_Test.fb_MKS422.q_xHV_DIS, BOOL, 86104656 (8)
        PRG_Test.fb_GCC_Test.i_iPRESS_R, INT, 86104768 (16)
        PRG_Test.fb_GPI_Test, FB_GPI_Test, 60448512 (12871104)
        PRG_Test.fb_GPI_Test.fb_MKS275.i_iPRESS_R, INT, 73231168 (16)
        PRG_Test.fb_GPI_Test.fb_MKS317.i_iPRESS_R, INT, 73319264 (16)
        PRG_Test.fb_GPI_Test.i_iPRESS_R, INT, 73319552 (16)
        PRG_Test.fb_PIP_Test, FB_PIP_Test, 34790528 (12788352)
        PRG_Test.fb_PIP_Test.fb_PIP_GAMMA.i_iPRESS, INT, 47576880 (16)
        PRG_Test.fb_PIP_Test.fb_PIP_GAMMA.i_xSP_DI, BOOL, 47576896 (8)
        PRG_Test.fb_PIP_Test.fb_PIP_GAMMA.q_xHVEna_DO, BOOL, 47576864 (8)
        PRG_Test.fb_PTM_Test, FB_PTM_Test, 47578880 (12869632)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_iCurrentMon, INT, 60448272 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_iRawSpeed, INT, 60448240 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_iTempMon, INT, 60448256 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xAccel, BOOL, 60448200 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xAtSpd, BOOL, 60448224 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xDecel, BOOL, 60448192 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xNCFault, BOOL, 60448216 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xRotate, BOOL, 60448208 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_iSpeedSet, INT, 60448336 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xProtection, BOOL, 60448312 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xReset, BOOL, 60448304 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xSetSpeed, BOOL, 60448320 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xStart, BOOL, 60448288 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xStop, BOOL, 60448296 (8)
        PRG_Test.fb_PTM_Test.fb_TwisTorr.i_xAtSpd, BOOL, 60360424 (8)
        PRG_Test.fb_PTM_Test.fb_TwisTorr.i_xFault, BOOL, 60360432 (8)
        PRG_Test.fb_PTM_Test.fb_TwisTorr.q_RunDO, BOOL, 60360440 (8)
        PRG_Test.fb_PTM_Test.i_diCurSpd, INT, 60448416 (16)
        PRG_Test.fb_PTM_Test.i_iCurrentMon, INT, 60448464 (16)
        PRG_Test.fb_PTM_Test.i_iRawSpeed, INT, 60448432 (16)
        PRG_Test.fb_PTM_Test.i_iTempMon, INT, 60448448 (16)
        PRG_Test.fb_PTM_Test.q_iSpeedSet, INT, 60448400 (16)
        PRG_Test.fb_VGC_Test, FB_VGC_Test, 8666880 (13339776)
        PRG_Test.fb_VGC_Test.io_fbFFHWO.q_xFastFaultOut, BOOL, 21517752 (8)
        PRG_Test.fb_VGC_Test.VGC.i_xClsLS, BOOL, 21515464 (8)
        PRG_Test.fb_VGC_Test.VGC.i_xOpnLS, BOOL, 21515456 (8)
        PRG_Test.fb_VGC_Test.VGC.q_xOPN_DO, BOOL, 21515472 (8)
        PRG_Test.fb_VRC_Test, FB_VRC_Test, 22006656 (12783872)
        PRG_Test.fb_VRC_Test.VRC.i_xClsLS, BOOL, 34790408 (8)
        PRG_Test.fb_VRC_Test.VRC.i_xOpnLS, BOOL, 34790400 (8)
        PRG_Test.fb_VRC_Test.VRC.q_xOPN_DO, BOOL, 34790416 (8)
        PRG_Test.TotalTests, INT, 8566224 (16)

.. raw:: html

   </details>
   <br />


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4394048 (32)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 86156416 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 86107808 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 86112000 (896)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 86108864 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 86110912 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 86111936 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 86108832 (32)


